golden/error/runtime_not_fn_1.test
"frobnicator"()

# output:
 --> stdin:1:0
  |
1 | "frobnicator"()
  | ^~~~~~~~~~~~~
Error: This is not a function, it cannot be called.
